libs/jsruntime/src/llvmir/bridge.hh

struct BasicBlock;
struct LambdaIr;
struct BooleanIr;
struct NumberIr;
struct ClosureIr;
struct CoroutineIr;
struct PromiseIr;
struct ValueIr;
struct ArgvIr;
struct StatusIr;
struct CaptureIr;
// number
BooleanIr* compiler_peer_create_is_number(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_create_is_same_number(Compiler* self, NumberIr* a, NumberIr* b);
NumberIr* compiler_peer_create_boolean_to_number(Compiler* self, BooleanIr* value);
NumberIr* compiler_peer_to_numeric(Compiler* self, ValueIr* value);
NumberIr* compiler_peer_get_nan(Compiler* self);
NumberIr* compiler_peer_get_zero(Compiler* self);
NumberIr* compiler_peer_get_number(Compiler* self, double value);
NumberIr* compiler_peer_create_bitwise_not(Compiler* self, NumberIr* value);
NumberIr* compiler_peer_create_fneg(Compiler* self, NumberIr* value);
NumberIr* compiler_peer_create_fmul(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_fdiv(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_frem(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_fadd(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_fsub(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_left_shift(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_signed_right_shift(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_unsigned_right_shift(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_bitwise_and(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_bitwise_xor(Compiler* self, NumberIr* lhs, NumberIr* rhs);
NumberIr* compiler_peer_create_bitwise_or(Compiler* self, NumberIr* lhs, NumberIr* rhs);
BooleanIr* compiler_peer_create_less_than(Compiler* self, NumberIr* lhs, NumberIr* rhs);
BooleanIr* compiler_peer_create_greater_than(Compiler* self, NumberIr* lhs, NumberIr* rhs);
BooleanIr* compiler_peer_create_less_than_or_equal(Compiler* self, NumberIr* lhs, NumberIr* rhs);
BooleanIr* compiler_peer_create_greater_than_or_equal(Compiler* self,
    NumberIr* lhs,
    NumberIr* rhs);
NumberIr* compiler_peer_create_number_phi(Compiler* self,
    NumberIr* then_value,
    BasicBlock* then_block,
    NumberIr* else_value,
    BasicBlock* else_block);
// closure
BooleanIr* compiler_peer_create_is_closure(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_create_is_same_closure(Compiler* self, ClosureIr* a, ClosureIr* b);
ClosureIr* compiler_peer_get_closure_nullptr(Compiler* self);
ClosureIr* compiler_peer_create_closure(Compiler* self, LambdaIr* lambda, uint16_t num_captures);
void compiler_peer_create_store_capture_to_closure(Compiler* self,
    CaptureIr* capture,
    ClosureIr* closure,
    uint16_t index);
StatusIr* compiler_peer_create_call_on_closure(Compiler* self,
    ClosureIr* closure,
    uint16_t argc,
    ArgvIr* argv,
    ValueIr* retv);
ClosureIr* compiler_peer_create_closure_phi(Compiler* self,
    ClosureIr* then_value,
    BasicBlock* then_block,
    ClosureIr* else_value,
    BasicBlock* else_block);
// promise
BooleanIr* compiler_peer_create_is_promise(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_create_is_same_promise(Compiler* self, PromiseIr* a, PromiseIr* b);
PromiseIr* compiler_peer_create_register_promise(Compiler* self, CoroutineIr* coroutine);
void compiler_peer_create_await_promise(Compiler* self, PromiseIr* promise, PromiseIr* awaiting);
void compiler_peer_create_resume(Compiler* self, PromiseIr* promise);
void compiler_peer_create_emit_promise_resolved(Compiler* self,
    PromiseIr* promise,
    ValueIr* result);