libs/jsruntime/src/llvmir/compiler/bridge.rs


    fn compiler_peer_create_is_number(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_number(
        peer: CompilerPeer,
        a: NumberIrPtr,
        b: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_boolean_to_number(
        peer: CompilerPeer,
        value: BooleanIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_to_numeric(peer: CompilerPeer, value: ValueIrPtr) -> NumberIrPtr;
    fn compiler_peer_get_nan(peer: CompilerPeer) -> NumberIrPtr;
    fn compiler_peer_get_zero(peer: CompilerPeer) -> NumberIrPtr;
    fn compiler_peer_get_number(peer: CompilerPeer, value: f64) -> NumberIrPtr;
    fn compiler_peer_create_bitwise_not(peer: CompilerPeer, value: NumberIrPtr) -> NumberIrPtr;
    fn compiler_peer_create_fneg(peer: CompilerPeer, value: NumberIrPtr) -> NumberIrPtr;
    fn compiler_peer_create_fmul(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_fdiv(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_frem(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_fadd(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_fsub(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_left_shift(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_signed_right_shift(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_unsigned_right_shift(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_bitwise_and(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_bitwise_xor(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_bitwise_or(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> NumberIrPtr;
    fn compiler_peer_create_less_than(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_greater_than(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_less_than_or_equal(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_greater_than_or_equal(
        peer: CompilerPeer,
        lhs: NumberIrPtr,
        rhs: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_number_phi(
        peer: CompilerPeer,
        then_value: NumberIrPtr,
        then_block: BasicBlockPtr,
        else_value: NumberIrPtr,
        else_block: BasicBlockPtr,
    ) -> NumberIrPtr;

    // string

    fn compiler_peer_create_char16_seq(
        peer: CompilerPeer,
        ptr: *const u16,
        len: u32,
    ) -> Char16SeqIrPtr;
    fn compiler_peer_create_string_on_stack(
        peer: CompilerPeer,
        value: Char16SeqIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_migrate_string_to_heap(
        peer: CompilerPeer,
        value: Char16SeqIrPtr,
    ) -> Char16SeqIrPtr;
    fn compiler_peer_create_string_phi(
        peer: CompilerPeer,
        then_value: Char16SeqIrPtr,
        then_block: BasicBlockPtr,
        else_value: Char16SeqIrPtr,
        else_block: BasicBlockPtr,
    ) -> Char16SeqIrPtr;

    // closure

    fn compiler_peer_get_closure_nullptr(peer: CompilerPeer) -> ClosureIrPtr;
    fn compiler_peer_create_is_closure(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_closure(
        peer: CompilerPeer,
        a: ClosureIrPtr,
        b: ClosureIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_closure(
        peer: CompilerPeer,
        lambda: LambdaIrPtr,
        num_captures: u16,
    ) -> ClosureIrPtr;
    fn compiler_peer_create_store_capture_to_closure(
        peer: CompilerPeer,
        capture: CaptureIrPtr,
        closure: ClosureIrPtr,
        index: u16,
    );
    fn compiler_peer_create_call_on_closure(
        peer: CompilerPeer,
        closure: ClosureIrPtr,
        argc: u16,
        argv: ArgvIrPtr,
        retv: ValueIrPtr,
    ) -> StatusIrPtr;
    fn compiler_peer_create_closure_phi(
        peer: CompilerPeer,
        then_value: ClosureIrPtr,
        then_block: BasicBlockPtr,
        else_value: ClosureIrPtr,
        else_block: BasicBlockPtr,
    ) -> ClosureIrPtr;

    // promise

    fn compiler_peer_create_is_promise(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_promise(
        peer: CompilerPeer,
        a: PromiseIrPtr,
        b: PromiseIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_register_promise(
        peer: CompilerPeer,
        coroutine: CoroutineIrPtr,
    ) -> PromiseIrPtr;
    fn compiler_peer_create_await_promise(
        peer: CompilerPeer,
        promise: PromiseIrPtr,
        awaiting: PromiseIrPtr,
    );
    fn compiler_peer_create_resume(peer: CompilerPeer, promise: PromiseIrPtr);
    fn compiler_peer_create_emit_promise_resolved(
        peer: CompilerPeer,
        promise: PromiseIrPtr,
        result: ValueIrPtr,
    );

    // object

    fn compiler_peer_get_object_nullptr(peer: CompilerPeer) -> ObjectIrPtr;
    fn compiler_peer_create_is_object(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_object(
        peer: CompilerPeer,
        a: ObjectIrPtr,
        b: ObjectIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_to_object(peer: CompilerPeer, value: ValueIrPtr) -> ObjectIrPtr;
    fn compiler_peer_create_object(peer: CompilerPeer) -> ObjectIrPtr;
    fn compiler_peer_create_get_value_by_symbol(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: u32,
        strict: bool,
    ) -> ValueIrPtr;
    fn compiler_peer_create_get_value_by_number(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: f64,
        strict: bool,
    ) -> ValueIrPtr;
    fn compiler_peer_create_get_value_by_value(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: ValueIrPtr,
        strict: bool,
    ) -> ValueIrPtr;
    fn compiler_peer_create_set_value_by_symbol(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: u32,
        value: ValueIrPtr,
    );
    fn compiler_peer_create_set_value_by_number(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: f64,
        value: ValueIrPtr,
    );
    fn compiler_peer_create_set_value_by_value(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: ValueIrPtr,
        value: ValueIrPtr,
    );
    fn compiler_peer_create_create_data_property_by_symbol(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: u32,
        value: ValueIrPtr,
        retv: ValueIrPtr,
    ) -> StatusIrPtr;
    fn compiler_peer_create_create_data_property_by_number(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: f64,
        value: ValueIrPtr,
        retv: ValueIrPtr,
    ) -> StatusIrPtr;
    fn compiler_peer_create_create_data_property_by_value(
        peer: CompilerPeer,
        object: ObjectIrPtr,
        key: ValueIrPtr,
        value: ValueIrPtr,
        retv: ValueIrPtr,
    ) -> StatusIrPtr;
    fn compiler_peer_create_copy_data_properties(
        peer: CompilerPeer,
        target: ObjectIrPtr,
        source: ValueIrPtr,
        retv: ValueIrPtr,
    ) -> StatusIrPtr;

    // value
